# gomoku_claude

./: .env.example  .env.prod  .env.prod.example  .gitignore  CLIENT_OPTIMIZATION.md  DEV_GUIDE.md  DOCKER_README.md  MD.md  README.md  TODO.md  build.config.js  docker-compose.yml  docker-manager.sh  package-lock.json  package.json  pyproject.toml
backend/: .env.example  Dockerfile  Dockerfile.dev  README.md  SERVICE_ARCHITECTURE.md  TEST_STRUCTURE.md  TODO.md  WEBSOCKET_MIGRATION.md  alembic.ini  create_superuser.py  debug_quick_challenge.py  debug_sse_turns.py  debug_turns.py  fix_enums.sql  manage.py  pyproject.toml  pytest.ini  setup_test_data.py  static_optimization.py  targeted_update_fix_summary.py  test_centralized_challenges.py  test_centralized_resign.py  test_complete_challenge_system.py  test_csrf_token_fix.py  test_db_connection.py  test_dual_player_sse.py  test_end_to_end_websocket.py  test_final_centralized_system.py  test_html_escaping.py  test_htmx_querySelector_fix.py  test_htmx_scope_fix.py  test_htmx_websocket_turns.py  test_performance_fix.py  test_resign_fix.py  test_resign_race_condition_fix.py  test_resign_target_fix.py  test_sse_final.py  test_sse_fix.py  test_sse_optimization.py  test_sse_revert.py  (+10 more)
backend/core/: exceptions.py  models.py  views.py
backend/core/management/commands/: load_rulesets.py  seed_data.py
backend/fixtures/: README.md
backend/games/: admin.py  game_services.py  interfaces.py  models.py  serializers.py  services.py  state_managers.py  test_game_services.py  test_models.py  test_multi_game_models.py  test_services.py  validators.py  views.py
backend/games/management/commands/: create_initial_rulesets.py
backend/games/migrations/: 0001_initial.py  0002_initial.py  0003_add_db_indexes.py
backend/gomoku/: asgi.py  settings.py  test_settings.py  urls.py  wsgi.py
backend/migrations/: env.py
backend/migrations/versions/: 715ec823adf9_create_all_tables_rulesets_users_games_.py  750418232757_add_all_models_ruleset_user_game_.py  d4e0143cb440_initial_models_ruleset_user_game_.py  d72264d05025_make_white_player_id_required_in_games_.py
backend/src/backend/: main.py
backend/src/backend/api/: router.py
backend/src/backend/api/routes/: __init__.py  games.py  rulesets.py  users.py
backend/src/backend/core/: __init__.py  config.py
backend/src/backend/db/: __init__.py  database.py
backend/src/backend/db/models/: __init__.py  game.py  gamemove.py  ruleset.py  user.py
backend/src/backend/schemas/: __init__.py  game.py  gamemove.py  ruleset.py  user.py
backend/src/backend/services/: __init__.py  game_service.py
backend/src/gomoku_backend/: __init__.py
backend/static/: manifest.json
backend/static/css/: critical.css  style.css
backend/static/js/: app.js  app.optimized.js  htmx-sse-integration.js  htmx-sse-integration.optimized.js  performance-debug.js  sse-manager.js  sse-manager.optimized.js  sw.js  websocket-analyzer.js
backend/templates/: base.html  base.optimized.html  base.production.html
backend/templates/partials/: critical_inline.css
backend/templates/web/: dashboard.html  error.html  friends.html  game_detail.html  games.html  home.html  login.html  register.html
backend/templates/web/partials/: blocked_users.html  challenge_error.html  challenge_modal.html  challenge_response.html  challenge_success.html  dashboard_game_panel.html  error_message.html  friend_request_error.html  friend_request_result.html  friends_modal_content.html  friends_panel.html  game_actions.html  game_board.html  game_board_base.html  game_display.html  game_move_htmx.html  game_turn_display.html  games_modal_content.html  games_panel.html  move_history.html  pending_requests.html  search_results.html  single_move_update.html
backend/test_reports/: pytest_report.html
backend/tests/: conftest.py  factories.py  test_auth_endpoints.py  test_challenge_system.py  test_cross_browser_sse.py  test_dashboard_panels.py  test_database_configuration.py  test_embedded_game_dashboard.py  test_friend_system.py  test_game.py  test_game_board.py  test_game_crud.py  test_game_service.py  test_game_services.py  test_gamemove.py  test_games_models.py  test_go_capture.py  test_go_suicide_validation.py  test_mini_gomoku_basic.py  test_mini_gomoku_selenium.py  test_move_validation.py  test_pending_challenges.py  test_registration_removal.py  test_ruleset.py  test_rulesets.py  test_selenium_multiplayer.py  test_services.py  test_sse_real_time.py  test_standardized_rulesets.py  test_subclassed_rulesets.py  test_user.py  test_user_management.py  test_users_models.py  test_web_views.py  test_websocket_consumer.py  test_websocket_integration.py  test_websocket_performance.py
backend/tests/api/: conftest.py  test_games_api.py  test_rulesets_api.py  test_users_api.py
backend/tests/fixtures/: rulesets.json
backend/tests/utils/: sse_helpers.py
backend/users/: admin.py  authentication.py  models.py  serializers.py  test_models.py  views.py
backend/users/management/commands/: __init__.py  createuser.py
backend/users/migrations/: 0001_initial.py  0002_alter_user_email.py  0003_alter_user_email.py
backend/web/: TODO.md  consumers.py  context_processors.py  forms.py  models.py  routing.py  services.py  test_challenge_system.py  test_friend_system.py  test_game_board.py  test_pending_challenges.py  test_phase11_panels.py  test_phase12_single_view.py  test_views.py  test_websocket_consumer.py  urls.py  views.py
backend/web/templatetags/: board_filters.py
frontend/: .env.example  MANUAL_TEST_GUIDE.md  README.md  RUN_GAME.md  TODO.md  demo_gui.py  gomoku_config.json  gomoku_gui.py  pyproject.toml  simple_gomoku.py  test_win.py
frontend/src/frontend/: main.py
frontend/src/frontend/auth/: __init__.py  auth_manager.py  config_manager.py  models.py
frontend/src/frontend/client/: __init__.py  api_client.py
frontend/src/frontend/game/: __init__.py  game_state.py
frontend/src/frontend/ui/: __init__.py  auth_dialogs.py  game_board.py
frontend/tests/: test_game_management.py  test_gui_auth.py  test_integration_full.py  test_sse_client.py
(+38 files in other folders)
