[project]
name = "backend"
version = "0.1.0"
description = "Gomoku game backend API with FastAPI and PostgreSQL"
readme = "README.md"
authors = [
    { name = "Dane Kennedy", email = "kennedy.dane@gmail.com" }
]
requires-python = ">=3.9,<3.14"
dependencies = [
    # FastAPI and ASGI server
    "fastapi>=0.115.0,<0.116.0",
    "uvicorn[standard]>=0.30.0,<0.31.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.0,<2.1.0",
    "asyncpg>=0.29.0,<0.30.0",
    "psycopg2-binary>=2.9.0,<3.0.0", # For sync operations and Alembic
    "alembic>=1.13.0,<1.14.0",
    # Data validation and serialization
    "pydantic>=2.8.0,<3.0.0",
    "pydantic-settings>=2.4.0,<3.0.0",
    # Environment and configuration
    "python-dotenv>=1.0.0,<1.1.0",
    # Logging
    "loguru>=0.7.0,<0.8.0",
    # HTTP client for testing
    "httpx>=0.27.0,<0.28.0",
    "email-validator>=2.2.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.0.0,<8.0.0",
    "pytest-asyncio>=0.21.0,<0.22.0",
    "pytest-mock>=3.12.0,<4.0.0",
    # Code quality
    "ruff>=0.1.0,<0.2.0",
    "mypy>=1.8.0,<2.0.0",
    # Database testing
    "pytest-postgresql>=5.0.0,<6.0.0",
    "aiosqlite>=0.21.0",
]

[project.scripts]
backend = "backend.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]
