[project]
name = "gomoku-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Dane Kennedy", email = "kennedy.dane@gmail.com" }
]
requires-python = ">=3.9, <3.14"
dependencies = [
    "channels>=4.3.1",
    "django>=4.2.23",
    "django-cors-headers>=4.7.0",
    "django-eventstream>=4.5.1",
    "django-extensions>=4.1",
    "djangorestframework>=3.16.1",
    "psycopg2-binary>=2.9.10",
    "python-decouple>=3.8",
    "redis>=6.4.0",
]

[project.scripts]
gomoku-backend = "gomoku_backend:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
