[project]
name = "gomoku-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Dane Kennedy", email = "kennedy.dane@gmail.com" }
]
requires-python = ">=3.9, <3.14"
dependencies = [
    "channels>=4.3.1",
    "coverage>=7.10.3",
    "django>=4.2.23",
    "django-cors-headers>=4.7.0",
    "django-crispy-forms>=2.3",
    "django-eventstream>=4.5.1",
    "django-extensions>=4.1",
    "djangorestframework>=3.16.1",
    "crispy-bootstrap5>=2024.2",
    "factory-boy>=3.3.3",
    "loguru>=0.7.2",
    "psycopg2-binary>=2.9.10",
    "python-decouple>=3.8",
    "redis>=6.4.0",
    "daphne>=4.2.1",
    "pytest>=7.0.0",
    "pytest-django>=4.9.0",
    "pytest-html>=4.1.1",
    "beautifulsoup4>=4.12.3",
]

[project.scripts]
gomoku-backend = "gomoku_backend:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
