[project]
name = "frontend"
version = "0.1.0"
description = "Gomoku game GUI client using Dear PyGUI"
readme = "README.md"
authors = [
    { name = "Dane Kennedy", email = "kennedy.dane@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    # GUI Framework
    "dearpygui>=1.11.0,<2.0.0",
    
    # HTTP client for API communication
    "httpx>=0.27.0,<0.28.0",
    
    # Data validation
    "pydantic>=2.8.0,<3.0.0",
    
    # Logging
    "loguru>=0.7.0,<0.8.0",
    
    # Configuration management
    "python-dotenv>=1.0.0,<1.1.0",
    
    # Async support
    "asyncio-mqtt>=0.16.0,<0.17.0",  # For potential future real-time features
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.0.0,<8.0.0",
    "pytest-asyncio>=0.21.0,<0.22.0",
    "pytest-mock>=3.12.0,<4.0.0",
    "pytest-qt>=4.0.0,<5.0.0",  # For GUI testing
    
    # Code quality
    "ruff>=0.1.0,<0.2.0",
    "mypy>=1.8.0,<2.0.0",
]

[project.scripts]
gomoku-gui = "frontend.main:main"
frontend = "frontend.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
